# fast-distances

./: Cargo.toml  LICENSE  README.md
examples/: main.rs
src/: lib.rs  utils.rs
src/distances/: approx_log_gamma.rs  bray_curtis.rs  bray_curtis_grad.rs  canberra.rs  canberra_grad.rs  chebyshev.rs  chebyshev_grad.rs  correlation.rs  cosine.rs  cosine_grad.rs  dice.rs  euclidean.rs  euclidean_grad.rs  hamming.rs  haversine.rs  haversine_grad.rs  hellinger.rs  hellinger_grad.rs  hyperboloid_grad.rs  jaccard.rs  kulsinski.rs  ll_dirichlet.rs  log_beta.rs  log_single_beta.rs  mahalanobis.rs  mahalanobis_grad.rs  manhattan.rs  manhattan_grad.rs  matching.rs  minkowski.rs  minkowski_grad.rs  mod.rs  poincare.rs  rogers_tanimoto.rs  russellrao.rs  sokal_michener.rs  sokal_sneath.rs  standardised_euclidean.rs  standardised_euclidean_grad.rs  weighted_minkowski.rs  (+2 more)
