[package]
name = "fast-distances"
version = "0.0.1"
description = "A rust library to provide distances for multidimensional arrays"
keywords = ["machine-learning", "clustering", "ai", "ml", "distance"]
categories = ["mathematics", "science", "algorithms"]
authors = ["Eugene Hauptmann"]
repository = "https://github.com/eugenehp/fast-distances"
homepage = "https://github.com/eugenehp/fast-distances"
license-file = "LICENSE"
edition = "2021"

[dependencies]
approx = "0.5.1"
ndarray = "0.16.1"
num = "0.4.3"
num-traits = "0.2.19"
